--- a/week3/package.json
+++ b/week3/package.json
@@ -38,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "yarn-audit-fix": "^9.3.1"
   }
 }
