--- a/week3/package.json
+++ b/week3/package.json
@@ -39,7 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "yarn-audit-fix": "^9.3.1"
-  }
+  "devDependencies": {}
 }
